# src/openapi.yaml
@@ -751,6 +751,12 @@ components:
           description: 'Het internationale telefoonnummer waarop de gemeente bereikbaar
             is. Bijvoorbeeld: +31 20 624 1111'
           maxLength: 20
+        contactFormulierLink:
+          type: string
+          format: uri
+          title: Contact formulier
+          description: De webpagina van het contact formulier van de organisatie.
+          maxLength: 200
         bevoegdeOrganisaties:
           type: array
           items:
